Many major documentation updates: pasted in Mac installation instructions; many formatting updates to ensure proper HTML display of markdown; includes associated documentation changes in flux-client and flux-python-api

--- a/apache/example.conf
+++ b/apache/example.conf
@@ -2,6 +2,10 @@
     ServerAdmin webmaster@localhost
     ServerName localhost
 
+    ############################################################################
+    # LINUX ONLY; set up /var/www (or wherever flux-client lives) for web access
+    ############################################################################
+    
     DocumentRoot /var/www
     <Directory />
         Options FollowSymLinks
@@ -14,8 +18,10 @@
         allow from all
     </Directory>
 
+    
+    
     ############################################################################
-    # Reverse proxies for NASA ACOS flux-server
+    # Reverse proxies for CarbonDataExplorer flux-server
     ############################################################################
 
     <Location /flux>
