Documentation and installer script updates; includes associated submodule updates to documentation

--- a/apache/example.conf
+++ b/apache/example.conf
@@ -21,7 +21,7 @@
     
     
     ############################################################################
-    # Reverse proxies for CarbonDataExplorer flux-server
+    # Reverse proxies for Carbon Data Explorer Web API Server
     ############################################################################
 
     <Location /flux>
